--- a/frontend/src/app/modules/main/map-controls/top-controls/top-controls.component.html
+++ b/frontend/src/app/modules/main/map-controls/top-controls/top-controls.component.html
@@ -26,8 +26,8 @@
         <p class="animate-none text-white z-10">{{ driverInfo.isActive ? 'ACTIVE' : 'INACTIVE' }}</p>
       </div>
 
-      <!-- register -->
-      <div *ngIf="accountType === 'anonymous'" routerLink="/register"
+      <!-- login -->
+      <div *ngIf="accountType === 'anonymous'" routerLink="/login"
       class="flex flex-col justify-center text-center text-xl w-11 h-11 my-auto
       rounded-full cursor-pointer hover:text-light">
         <fa-icon [icon]="faArrowRightToBracket" class=""></fa-icon>
