--- a/frontend/src/app/modules/auth/register/register.component.html
+++ b/frontend/src/app/modules/auth/register/register.component.html
@@ -7,7 +7,7 @@
     </div>
   </div>
 
-  <div class="w-11/12 sm:w-96 mx-auto text-left">
+  <div *ngIf="!registrationSuccessful" class="w-11/12 sm:w-96 mx-auto text-left">
     <h1 class="text-3xl font-bold text-white">Create an account</h1>
 
     <form [formGroup]="registerForm" (submit)="onSubmit()">
@@ -21,7 +21,7 @@
           placeholder-light caret-light border-b border-light focus:border-accent-light
           bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
           id="register-email" type="text" placeholder="Your E-Mail Address" autofocus="autofocus"
-          formControlName="email">
+          formControlName="email" (input)="errorMessage = ''">
           <div class="h-1">
             <p *ngIf="email && email.invalid && email.touched"
               class="text-yellow-400 text-xs italic">
@@ -44,7 +44,8 @@
             <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
             placeholder-light caret-light border-b border-light focus:border-accent-light
             bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
-            id="register-first-name" type="text" placeholder="Your First Name" formControlName="name">
+            id="register-first-name" type="text" placeholder="Your First Name" formControlName="name"
+            (input)="errorMessage = ''">
             <div class="h-1">
               <p *ngIf="name && name.invalid && name.touched"
                 class="text-yellow-400 text-xs italic">
@@ -69,7 +70,8 @@
             <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
             placeholder-light caret-light border-b border-light focus:border-accent-light
             bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
-            id="register-last-name" type="text" placeholder="Your Last Name" formControlName="surname">
+            id="register-last-name" type="text" placeholder="Your Last Name" formControlName="surname"
+            (input)="errorMessage = ''">
             <div class="h-1">
               <p *ngIf="surname && surname.invalid && surname.touched"
                 class="text-yellow-400 text-xs italic">
@@ -89,13 +91,57 @@
 
         <div class="w-full">
           <label class="block tracking-wide text-light text-xs font-bold mb-1"
+          for="register-city">
+            City
+          </label>
+          <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+          placeholder-light caret-light border-b border-light focus:border-accent-light
+          bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
+          id="register-city" type="text" placeholder="Driver's City" formControlName="city"
+          (input)="errorMessage = ''">
+          <div class="h-1">
+            <p *ngIf="city && city.invalid && city.touched"
+              class="text-yellow-400 text-xs italic">
+              <span *ngIf="city.errors?.['required']">
+                City name is required.
+              </span>
+            </p>
+          </div>
+        </div>
+
+        <div class="w-full">
+          <label class="block tracking-wide text-light text-xs font-bold mb-1"
+          for="register-phone-number">
+            Phone Number
+          </label>
+          <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+          placeholder-light caret-light border-b border-light focus:border-accent-light
+          bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
+          id="register-phone-number" type="text" placeholder="Driver's Phone Number"
+          formControlName="phoneNumber" (input)="errorMessage = ''">
+          <div class="h-1">
+            <p *ngIf="phoneNumber && phoneNumber.invalid && phoneNumber.touched"
+              class="text-yellow-400 text-xs italic">
+              <span *ngIf="phoneNumber.errors?.['required']">
+                Phone number is required.
+              </span>
+              <span *ngIf="phoneNumber.errors?.['pattern']">
+                Phone number is invalid.
+              </span>
+            </p>
+          </div>
+        </div>
+
+        <div class="w-full">
+          <label class="block tracking-wide text-light text-xs font-bold mb-1"
           for="register-password">
             Password
           </label>
           <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
           placeholder-light caret-light border-b border-light focus:border-accent-light
           bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
-          id="register-password" type="password" placeholder="Your Password" formControlName="password">
+          id="register-password" type="password" placeholder="Your Password" formControlName="password"
+          (input)="errorMessage = ''">
           <div class="h-1">
             <p *ngIf="password && password.invalid && password.touched"
               class="text-yellow-400 text-xs italic">
@@ -117,7 +163,8 @@
           <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
           placeholder-light caret-light border-b border-light focus:border-accent-light
           bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
-          id="register-confirm-password" type="password" placeholder="Confirm Your Password" formControlName="confirmPassword">
+          id="register-confirm-password" type="password" placeholder="Confirm Your Password" formControlName="confirmPassword"
+          (input)="errorMessage = ''">
           <div class="h-1">
             <p *ngIf="password && confirmPassword && registerForm.hasError('notSame') && password.valid"
               class="text-yellow-400 text-xs italic">
@@ -127,13 +174,30 @@
         </div>
       </div>
 
-    <button type="submit" class="w-full h-16 bg-accent-light active:bg-accent text-white font-medium tracking-wide">
-      REGISTER
-    </button>
-  </form>
 
-  <div class="text-light text-sm text-center mt-6">
-    Already have an account?
-    <span class="text-accent-light cursor-pointer"><a routerLink="/login">Log In</a></span>
+      <button type="submit" class="w-full h-16 bg-accent-light active:bg-accent text-white font-medium tracking-wide">
+        REGISTER
+      </button>
+
+      <div class="h-1 mx-auto text-center mt-0.5">
+        <p *ngIf="errorMessage"
+          class="text-red-400 text italic">
+          {{ errorMessage }}
+        </p>
+      </div>
+
+    </form>
+
+    <div class="text-light text-sm text-center mt-6">
+      Already have an account?
+      <span class="text-accent-light cursor-pointer"><a routerLink="/login">Log In</a></span>
+    </div>
+
+  </div>
+
+  <div *ngIf="registrationSuccessful" class="w-11/12 sm:w-120 mx-auto text-center border
+  border-stone-500 rounded-lg py-16 px-4 sm:p-16 my-20 text-stone-500
+  font-bold text-lg">
+    <strong class="text-2xl">Registration successful!</strong> <br> You can now check your e-mail in order to confirm your account.
   </div>
 </div>
