--- a/frontend/src/app/modules/admin/register-driver/register-driver.component.html
+++ b/frontend/src/app/modules/admin/register-driver/register-driver.component.html
@@ -19,7 +19,7 @@
             for="register-email">
               E-Mail
             </label>
-            <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+            <input class="appearance-none block w-full text-white tracking-wide
             placeholder-light caret-light border-b border-light focus:border-accent-light
             bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
             id="register-email" type="text" placeholder="Driver's E-Mail Address" autofocus="autofocus"
@@ -43,7 +43,7 @@
               for="register-first-name">
                 First Name
               </label>
-              <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+              <input class="appearance-none block w-full text-white tracking-wide
               placeholder-light caret-light border-b border-light focus:border-accent-light
               bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
               id="register-first-name" type="text" placeholder="Driver's First Name" formControlName="name">
@@ -68,7 +68,7 @@
               for="register-last-name">
                 Last Name
               </label>
-              <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+              <input class="appearance-none block w-full text-white tracking-wide
               placeholder-light caret-light border-b border-light focus:border-accent-light
               bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
               id="register-last-name" type="text" placeholder="Driver's Last Name" formControlName="surname">
@@ -94,7 +94,7 @@
             for="register-city">
               City
             </label>
-            <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+            <input class="appearance-none block w-full text-white tracking-wide
             placeholder-light caret-light border-b border-light focus:border-accent-light
             bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
             id="register-city" type="text" placeholder="Driver's City" formControlName="city">
@@ -113,7 +113,7 @@
             for="register-phone-number">
               Phone Number
             </label>
-            <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+            <input class="appearance-none block w-full text-white tracking-wide
             placeholder-light caret-light border-b border-light focus:border-accent-light
             bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
             id="register-phone-number" type="text" placeholder="Driver's Phone Number"
@@ -136,7 +136,7 @@
             for="register-password">
               Password
             </label>
-            <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+            <input class="appearance-none block w-full text-white tracking-wide
             placeholder-light caret-light border-b border-light focus:border-accent-light
             bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
             id="register-password" type="password" placeholder="Driver's Password" formControlName="password">
@@ -158,7 +158,7 @@
             for="register-confirm-password">
               Confirm Password
             </label>
-            <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+            <input class="appearance-none block w-full text-white tracking-wide
             placeholder-light caret-light border-b border-light focus:border-accent-light
             bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
             id="register-confirm-password" type="password" placeholder="Confirm the Password" formControlName="confirmPassword">
@@ -223,7 +223,7 @@
                 for="register-vehicle-make">
                   Vehicle Make
                 </label>
-                <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+                <input class="appearance-none block w-full text-white tracking-wide
                 placeholder-light caret-light border-b border-light focus:border-accent-light
                 bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
                 id="register-vehicle-make" type="text" placeholder="Make" formControlName="make">
@@ -242,7 +242,7 @@
                 for="register-vehicle-model">
                   Vehicle Model
                 </label>
-                <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+                <input class="appearance-none block w-full text-white tracking-wide
                 placeholder-light caret-light border-b border-light focus:border-accent-light
                 bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
                 id="register-vehicle-model" type="text" placeholder="Model" formControlName="model">
@@ -263,7 +263,7 @@
                 for="register-vehicle-colour">
                   Colour
                 </label>
-                <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+                <input class="appearance-none block w-full text-white tracking-wide
                 placeholder-light caret-light border-b border-light focus:border-accent-light
                 bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
                 id="register-vehicle-colour" type="text" placeholder="Colour" formControlName="colour">
@@ -282,7 +282,7 @@
                 for="register-vehicle-license-plate">
                   License Plate Number
                 </label>
-                <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+                <input class="appearance-none block w-full text-white tracking-wide
                 placeholder-light caret-light border-b border-light focus:border-accent-light
                 bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
                 id="register-vehicle-license-plate" type="text" placeholder="License Plate Number"
