--- a/frontend/src/app/modules/auth/login/login.component.html
+++ b/frontend/src/app/modules/auth/login/login.component.html
@@ -17,7 +17,7 @@
         for="login-email">
           E-Mail
         </label>
-        <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+        <input class="appearance-none block w-full text-white tracking-wide
         placeholder-light caret-light border-b border-light focus:border-accent-light
         bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
         id="login-email" type="text" placeholder="Your E-Mail Address" autofocus="autofocus"
@@ -41,7 +41,7 @@
         for="login-password">
           Password
         </label>
-        <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+        <input class="appearance-none block w-full text-white tracking-wide
         placeholder-light caret-light border-b border-light focus:border-accent-light
         bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
         id="login-password" type="password" placeholder="Your Password" formControlName="password"
