--- a/frontend/src/app/modules/auth/password-reset/password-reset.component.html
+++ b/frontend/src/app/modules/auth/password-reset/password-reset.component.html
@@ -17,7 +17,7 @@
         for="login-email">
           Password
         </label>
-        <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+        <input class="appearance-none block w-full text-white tracking-wide
         placeholder-light caret-light border-b border-light focus:border-accent-light
         bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
         id="login-password" type="text" placeholder="Password" autofocus="autofocus"
@@ -38,7 +38,7 @@
         for="login-password">
           Repeat password
         </label>
-        <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+        <input class="appearance-none block w-full text-white tracking-wide
         placeholder-light caret-light border-b border-light focus:border-accent-light
         bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
         id="login-repeat-password" type="password" placeholder="Repeat your Password" formControlName="password"
