--- a/frontend/src/app/modules/auth/register/register.component.html
+++ b/frontend/src/app/modules/auth/register/register.component.html
@@ -17,7 +17,7 @@
           for="register-email">
             E-Mail
           </label>
-          <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+          <input class="appearance-none block w-full text-white tracking-wide
           placeholder-light caret-light border-b border-light focus:border-accent-light
           bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
           id="register-email" type="text" placeholder="Your E-Mail Address" autofocus="autofocus"
@@ -41,7 +41,7 @@
             for="register-first-name">
               First Name
             </label>
-            <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+            <input class="appearance-none block w-full text-white tracking-wide
             placeholder-light caret-light border-b border-light focus:border-accent-light
             bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
             id="register-first-name" type="text" placeholder="Your First Name" formControlName="name"
@@ -67,7 +67,7 @@
             for="register-last-name">
               Last Name
             </label>
-            <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+            <input class="appearance-none block w-full text-white tracking-wide
             placeholder-light caret-light border-b border-light focus:border-accent-light
             bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
             id="register-last-name" type="text" placeholder="Your Last Name" formControlName="surname"
@@ -94,7 +94,7 @@
           for="register-city">
             City
           </label>
-          <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+          <input class="appearance-none block w-full text-white tracking-wide
           placeholder-light caret-light border-b border-light focus:border-accent-light
           bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
           id="register-city" type="text" placeholder="Driver's City" formControlName="city"
@@ -114,7 +114,7 @@
           for="register-phone-number">
             Phone Number
           </label>
-          <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+          <input class="appearance-none block w-full text-white tracking-wide
           placeholder-light caret-light border-b border-light focus:border-accent-light
           bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
           id="register-phone-number" type="text" placeholder="Driver's Phone Number"
@@ -137,7 +137,7 @@
           for="register-password">
             Password
           </label>
-          <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+          <input class="appearance-none block w-full text-white tracking-wide
           placeholder-light caret-light border-b border-light focus:border-accent-light
           bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
           id="register-password" type="password" placeholder="Your Password" formControlName="password"
@@ -160,7 +160,7 @@
           for="register-confirm-password">
             Confirm Password
           </label>
-          <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+          <input class="appearance-none block w-full text-white tracking-wide
           placeholder-light caret-light border-b border-light focus:border-accent-light
           bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
           id="register-confirm-password" type="password" placeholder="Confirm Your Password" formControlName="confirmPassword"
