--- a/frontend/src/app/modules/user/profile/passenger-profile/passenger-details/passenger-details.component.html
+++ b/frontend/src/app/modules/user/profile/passenger-profile/passenger-details/passenger-details.component.html
@@ -107,7 +107,7 @@
             for="buy-token-amount">
               Amount of tokens [ 100T = €1 ]
             </label>
-            <input class="appearance-none block w-full bg-gray-200 text-white tracking-wide
+            <input class="appearance-none block w-full text-white tracking-wide
             placeholder-stone-400 caret-stone-500 border-b border-stone-500 focus:border-accent-light
             bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
             step="100" (input)="buyTokensErrorMessage = ''" [(ngModel)]="tokensToBuy"
