--- a/frontend/src/app/modules/main/order-menu/order-menu.component.html
+++ b/frontend/src/app/modules/main/order-menu/order-menu.component.html
@@ -218,4 +218,27 @@ sm:h-full select-none" id="order-menu">
     </div>
   </div>
 
+  <div *ngIf="showSplitFareSuccessModal"
+  class="fixed top-0 left-0 z-30 w-screen min-w-screen min-h-screen h-screen text-center
+    flex items-center justify-center bg-stone-500 bg-opacity-80 transition-opacity text-base font-display">
+    <div class="relative flex flex-col w-96 bg-dark rounded-xl mx-auto
+    overflow-hidden px-9 py-8">
+
+      <div class="circle-loader load-complete mx-auto mb-4">
+        <div class="checkmark draw"></div>
+      </div>
+      <h3 class="text-xl font-medium text-gray-50">
+        Success!
+        <br>
+        <span class="text-base text-stone-400">The ride will commence when we receive a confirmation from each passenger.</span>
+      </h3>
+
+      <button class="py-1 px-8 mt-6 border border-accent-light text-accent-light font-medium tracking-wide
+      hover:bg-accent-light hover:text-gray-50 rounded-2xl" (click)="confirmRideResponse()">
+        Close
+      </button>
+
+    </div>
+  </div>
+
 </div>
