Implement split fare notifications and error messages

--- a/frontend/src/app/modules/main/order-menu/order-menu.component.html
+++ b/frontend/src/app/modules/main/order-menu/order-menu.component.html
@@ -241,4 +241,12 @@ sm:h-full select-none" id="order-menu">
     </div>
   </div>
 
+  <div *ngIf="showErrorModal">
+    <app-error-modal
+      [title]="errorTitle"
+      [description]="errorMessage"
+      (onClose)="closeErrorModal()"
+    ></app-error-modal>
+  </div>
+
 </div>
