Rebase and add appropriate error messages

--- a/frontend/src/app/modules/main/order-menu/order-menu.component.html
+++ b/frontend/src/app/modules/main/order-menu/order-menu.component.html
@@ -233,10 +233,10 @@ sm:h-full select-none" id="order-menu">
         <span class="text-base text-stone-400">The ride will commence when we receive a confirmation from each passenger.</span>
       </h3>
 
-      <button class="py-1 px-8 mt-6 border border-accent-light text-accent-light font-medium tracking-wide
+      <!-- <button class="py-1 px-8 mt-6 border border-accent-light text-accent-light font-medium tracking-wide
       hover:bg-accent-light hover:text-gray-50 rounded-2xl" (click)="confirmRideResponse()">
         Close
-      </button>
+      </button> -->
 
     </div>
   </div>
