--- a/frontend/src/app/modules/user/profile/driver/driver-profile/driver-edit/driver-edit.component.html
+++ b/frontend/src/app/modules/user/profile/driver/driver-profile/driver-edit/driver-edit.component.html
@@ -18,7 +18,7 @@
             First Name
           </label>
           <input
-            class="appearance-none block w-full bg-gray-200 text-white tracking-wide placeholder-light caret-light border-b border-light focus:border-accent-light bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
+            class="appearance-none block w-full text-white tracking-wide placeholder-light caret-light border-b border-light focus:border-accent-light bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
             id="register-first-name"
             type="text"
             placeholder="Your First Name"
@@ -49,7 +49,7 @@
             Last Name
           </label>
           <input
-            class="appearance-none block w-full bg-gray-200 text-white tracking-wide placeholder-light caret-light border-b border-light focus:border-accent-light bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
+            class="appearance-none block w-full text-white tracking-wide placeholder-light caret-light border-b border-light focus:border-accent-light bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
             id="register-last-name"
             type="text"
             placeholder="Your Last Name"
@@ -81,7 +81,7 @@
           Phone Number
         </label>
         <input
-          class="appearance-none block w-full bg-gray-200 text-white tracking-wide placeholder-light caret-light border-b border-light focus:border-accent-light bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
+          class="appearance-none block w-full text-white tracking-wide placeholder-light caret-light border-b border-light focus:border-accent-light bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
           id="register-phone-number"
           type="text"
           placeholder="Your Phone Number"
@@ -112,7 +112,7 @@
           City
         </label>
         <input
-          class="appearance-none block w-full bg-gray-200 text-white tracking-wide placeholder-light caret-light border-b border-light focus:border-accent-light bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
+          class="appearance-none block w-full text-white tracking-wide placeholder-light caret-light border-b border-light focus:border-accent-light bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
           id="register-city"
           type="text"
           placeholder="Your City"
@@ -389,7 +389,7 @@
       type="submit"
       class="w-full h-16 bg-accent-light active:bg-accent text-white font-medium tracking-wide"
     >
-      UPDATE PROFILE
+      SEND UPDATE REQUEST
     </button>
   </form>
 </div>
@@ -398,4 +398,11 @@
   <span class="text-accent-light cursor-pointer" (click)="resetPassword()"
     >Change password</span
   >
+</div>
+<div *ngIf="showConfirmModal">
+  <app-error-modal
+    title="Successfully sent request"
+    description="Successfully sent profile update request to the admin!"
+    (onClose)="closeModal()"
+  ></app-error-modal>
 </div>
