--- a/frontend/src/app/modules/user/profile/passenger-profile/passenger-edit/passenger-edit.component.html
+++ b/frontend/src/app/modules/user/profile/passenger-profile/passenger-edit/passenger-edit.component.html
@@ -9,7 +9,7 @@
           First Name
         </label>
         <input
-          class="appearance-none block w-full bg-gray-200 text-white tracking-wide placeholder-light caret-light border-b border-light focus:border-accent-light bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
+          class="appearance-none block w-full text-white tracking-wide placeholder-light caret-light border-b border-light focus:border-accent-light bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
           id="register-first-name"
           type="text"
           placeholder="Your First Name"
@@ -40,7 +40,7 @@
           Last Name
         </label>
         <input
-          class="appearance-none block w-full bg-gray-200 text-white tracking-wide placeholder-light caret-light border-b border-light focus:border-accent-light bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
+          class="appearance-none block w-full text-white tracking-wide placeholder-light caret-light border-b border-light focus:border-accent-light bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
           id="register-last-name"
           type="text"
           placeholder="Your Last Name"
@@ -72,7 +72,7 @@
         Phone Number
       </label>
       <input
-        class="appearance-none block w-full bg-gray-200 text-white tracking-wide placeholder-light caret-light border-b border-light focus:border-accent-light bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
+        class="appearance-none block w-full text-white tracking-wide placeholder-light caret-light border-b border-light focus:border-accent-light bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
         id="register-phone-number"
         type="text"
         placeholder="Your Phone Number"
@@ -103,7 +103,7 @@
         City
       </label>
       <input
-        class="appearance-none block w-full bg-gray-200 text-white tracking-wide placeholder-light caret-light border-b border-light focus:border-accent-light bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
+        class="appearance-none block w-full text-white tracking-wide placeholder-light caret-light border-b border-light focus:border-accent-light bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
         id="register-city"
         type="text"
         placeholder="Your City"
