--- a/frontend/src/app/modules/admin/update-requests/update-requests.component.html
+++ b/frontend/src/app/modules/admin/update-requests/update-requests.component.html
@@ -4,7 +4,7 @@
       class="border-4 border-stone-500 h-9 w-9 text-lg text-stone-500 hover:border-stone-400 hover:text-stone-400 text-center cursor-pointer transition hover:-translate-x-1 mb-2"
       routerLink="/"
     >
-      <fa-icon [icon]="faChevronLeft" class=""></fa-icon>
+      <fa-icon [icon]="faChevronLeft"></fa-icon>
     </div>
   </div>
 
