--- a/frontend/src/app/modules/admin/update-requests/update-requests.component.html
+++ b/frontend/src/app/modules/admin/update-requests/update-requests.component.html
@@ -13,7 +13,7 @@
   >
     <div
       class="mt-2 mr-3 flow-root w-1/3 overflow-y-scroll"
-      *ngIf="requests.length != 0"
+      *ngIf="requests.length !== 0"
     >
       <ul role="list" class="-my-5 divide-y divide-gray-200">
         <li *ngFor="let request of requests" class="py-4">
@@ -49,7 +49,7 @@
         </li>
       </ul>
     </div>
-    <div class="w-full border-l-2" *ngIf="requests.length != 0">
+    <div class="w-full border-l-2" *ngIf="requests.length !== 0">
       <table class="mx-auto border-separate border-spacing-2">
         <th></th>
         <th>Old Data</th>
@@ -347,6 +347,7 @@
         </button>
       </div>
     </div>
-    <div *ngIf="requests.length === 0">No driver update requests</div>
+    <div *ngIf="requests.length === 0" class="mx-auto text-center">
+      No driver update requests</div>
   </div>
 </div>
