--- a/frontend/src/app/modules/admin/ride-rejection-requests/ride-rejection-requests.component.html
+++ b/frontend/src/app/modules/admin/ride-rejection-requests/ride-rejection-requests.component.html
@@ -60,7 +60,7 @@
             <fa-icon [icon]="faCheck" class="text-white"></fa-icon>
           </button>
           <button class="bg-light hover:bg-gray-500 px-2 rounded-md w-10 h-10
-          ml-2">
+          ml-2" (click)="rejectRequest(i)">
             <fa-icon [icon]="faXmark" class="text-white mx-auto"></fa-icon>
           </button>
         </div>
