Fix users not getting refunded error

--- a/frontend/src/app/modules/admin/ride-rejection-requests/ride-rejection-requests.component.html
+++ b/frontend/src/app/modules/admin/ride-rejection-requests/ride-rejection-requests.component.html
@@ -69,7 +69,7 @@
     </div>
 
     <div *ngIf="requests.length === 0"
-    class="mx-auto text-center text-2xl text-stone-500 font-bold">
+    class="mx-auto text-center text-xl text-stone-500 font-bold">
       There are no pending ride rejection requests
     </div>
     
