--- a/frontend/src/app/modules/reports/ride-reports/ride-reports.component.html
+++ b/frontend/src/app/modules/reports/ride-reports/ride-reports.component.html
@@ -4,10 +4,7 @@
     <div
       class="relative border h-180 border-stone-500 rounded-lg py-16 px-4 sm:p-16"
     >
-      <div
-        class="absolute hidden lg:-right-32 lg:top-0 lg:flex lg:flex-col lg:gap-y-2 gap-x-2"
-      >
-      </div>
+    <h1 class="text-white text-xl"> Ride report </h1>
 <div>
     <form [formGroup] = "rideReportForm">
       <div class="flex justify-between gap-x-4 p-7">
@@ -43,9 +40,11 @@
             formControlName="startDate"
           />
           <div class="h-1">
-            <p
-              class="text-yellow-400 text-xs italic"
-            >
+            <p *ngIf="startDate && startDate.invalid && startDate.touched"
+              class="text-yellow-400 text-xs italic">
+              <span *ngIf="startDate.errors?.['required']">
+                Start date is required.
+              </span>
             </p>
           </div>
         </div>
@@ -63,11 +62,38 @@
             placeholder="End Date"
             formControlName="endDate"
           />
+          
           <div class="h-1">
-            <p
-              class="text-yellow-400 text-xs italic"
-            >
+            <p *ngIf="endDate && endDate.invalid && endDate.touched"
+              class="text-yellow-400 text-xs italic">
+              <span *ngIf="endDate.errors?.['required']">
+                End date is required.
+              </span>
             </p>
+          </div>
+        </div>
+        
+        <div *ngIf="accountType === 'admin'">
+          <div class="w-full">
+            <label
+              class="block tracking-wide text-light text-xs font-bold mb-1"
+              for="register-type"
+            >
+              Type
+            </label>
+            <select   class="appearance-none block w-full text-white tracking-wide placeholder-light caret-light border-b border-light focus:border-accent-light bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
+            name="cars" id="cars" formControlName="adminGraphType" (change)="changeAdminActiveSelect()">
+              <option class="bg-dark" [ngClass]="{'text-light': activeAdminSelect!=='driver'}" value="driver">Driver</option>
+              <option class="bg-dark"  [ngClass]="{'text-light': activeAdminSelect!=='passenger'}" value="passenger">Passenger</option>
+            </select>
+            <div class="h-1">
+              <p *ngIf="adminGraphType && adminGraphType.invalid && adminGraphType.touched"
+                class="text-yellow-400 text-xs italic">
+                <span *ngIf="adminGraphType.errors?.['required']">
+                  Type is required.
+                </span>
+              </p>
+            </div>
           </div>
         </div>
         <div class="w-full">
@@ -83,19 +109,20 @@
             <option class="bg-dark"  [ngClass]="{'text-light': activeSelect!=='NUM_OF_KM'}" value="NUM_OF_KM">Distance</option>
             <option class="bg-dark"  [ngClass]="{'text-light': activeSelect!=='NUM_OF_RIDES'}" value="NUM_OF_RIDES">Number of rides</option>
           </select>
-          <!--<input
-            class="appearance-none block w-full text-white tracking-wide placeholder-light caret-light border-b border-light focus:border-accent-light bg-transparent leading-tight outline-none py-1 focus:transition-color duration-300"
-            id="register-type"
-            type="text"
-            placeholder="Type"
-            formControlName="type"
-          />-->
+          <div class="h-1">
+            <p *ngIf="type && type.invalid && type.touched"
+              class="text-yellow-400 text-xs italic">
+              <span *ngIf="type.errors?.['required']">
+                Type is required.
+              </span>
+            </p>
+          </div>
         </div>
       </div>
       <div class="block mt-4">
         <div class="flex rounded-lg w-full ml-1 text-white p-5">
             <div class="w-full">
-            <button (click)="test()">
+            <button (click)="getReport()">
                 Search
             </button>
         </div>
