--- a/frontend/src/app/modules/main/driver-ride-details/driver-ride-details.component.html
+++ b/frontend/src/app/modules/main/driver-ride-details/driver-ride-details.component.html
@@ -4,7 +4,7 @@ sm:h-full select-none" id="order-menu">
   <div *ngIf="isOpened && ride" class="sm:static flex flex-col rounded-t-3xl sm:rounded-none
   w-screen h-140 sm:h-auto sm:w-120 bg-dark py-8 px-10 overflow-auto hidden-scrollbar">
     <h1 class="text-3xl font-bold text-gray-50 mt-4 sm:mt-0">Current ride</h1>
-    <div class="tracking-wide uppercase text-light font-medium rounded-2xl">{{ ride.status.replace('_', ' ') }}</div>
+    <div class="tracking-wide uppercase text-light font-medium rounded-2xl">{{ rideStatus }}</div>
 
     <div *ngIf="waypoints" class="flex flex-col shrink-0 gap-y-3 mt-6 max-h-72 overflow-auto">
       <div *ngFor="let waypoint of waypoints; let i=index;">
@@ -84,6 +84,11 @@ sm:h-full select-none" id="order-menu">
     <button *ngIf="ride.status === 'DRIVER_ARRIVED'" class="w-full h-16 bg-accent-light
     active:bg-accent text-white font-medium tracking-wide mt-8" (click)="beginRide()">
       BEGIN RIDE
+    </button>
+
+    <button *ngIf="ride.status === 'ARRIVED_AT_DESTINATION'" class="w-full h-16 bg-accent-light
+    active:bg-accent text-white font-medium tracking-wide mt-8" (click)="completeRide()">
+      COMPLETE RIDE
     </button>
 
   </div>
