Connect with backend and polished front

--- a/frontend/src/app/modules/passenger/favourite-routes/favourite-routes.component.html
+++ b/frontend/src/app/modules/passenger/favourite-routes/favourite-routes.component.html
@@ -35,7 +35,7 @@
     <span class="text-sm text-gray-700 dark:text-gray-400">
       Showing
       <span class="font-semibold text-gray-900 dark:text-white">{{
-        elemNumber
+        numberOfElements > 0 ? elemNumber + 1 : 0
       }}</span>
       of
       <span class="font-semibold text-gray-900 dark:text-white">{{
