--- a/frontend/src/app/modules/passenger/ride-history/ride-history.component.html
+++ b/frontend/src/app/modules/passenger/ride-history/ride-history.component.html
@@ -14,6 +14,9 @@
     >
       <div class="text-3xl"><strong>Ride History</strong></div>
       <br />
+      <div *ngIf="rides.length === 0" class="text-xl">
+        You didn't had any ride yet
+      </div>
       <ul role="list" class="-my-5 divide-y divide-gray-200">
         <li *ngFor="let ride of rides" class="py-4">
           <div
@@ -98,14 +101,17 @@
               </div>
             </div>
             <div class="w-3/4 text-left">
-              <div>Ride at {{ ride.startTime }}</div>
+              <div>
+                Ride at
+                <strong>{{ getDateTime(ride.startTime) }}</strong>
+              </div>
               <div>
                 Start:
-                {{ ride.startAddress }}
+                <strong>{{ ride.startAddress }}</strong>
               </div>
               <div>
                 Destination:
-                {{ ride.destinationAddress }}
+                <strong>{{ ride.destinationAddress }}</strong>
               </div>
             </div>
             <div class="w-1/3 text-right">
@@ -134,11 +140,11 @@
         <span class="text-sm text-gray-700 dark:text-gray-400">
           Showing
           <span class="font-semibold text-gray-900 dark:text-white">{{
-            startElem + 1
+            numOfElements === 0 ? 0 : startElem + 1
           }}</span>
           to
           <span class="font-semibold text-gray-900 dark:text-white">{{
-            startElem + 7 < numOfElements ? startElem + 7 : numOfElements
+            startElem + 4 < numOfElements ? startElem + 4 : numOfElements
           }}</span>
           of
           <span class="font-semibold text-gray-900 dark:text-white">{{
@@ -148,8 +154,9 @@
         </span>
         <div class="inline-flex mt-1 xs:mt-0">
           <button
-            class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-dark border-0 border-l border-gray-700 rounded-r hover:bg-medium"
+            class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-dark border-0 border-l border-gray-700 rounded-r hover:bg-medium disabled:text-gray-500"
             (click)="prev()"
+            [disabled]="startElem === 0"
           >
             <svg
               aria-hidden="true"
@@ -167,8 +174,9 @@
             Prev
           </button>
           <button
-            class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-dark border-0 border-l border-gray-700 rounded-r hover:bg-medium"
+            class="inline-flex items-center px-4 py-2 text-sm font-medium text-white bg-dark border-0 border-l border-gray-700 rounded-r hover:bg-medium disabled:text-gray-500"
             (click)="next()"
+            [disabled]="startElem + 4 >= numOfElements"
           >
             Next
             <svg
